Fix about section mobile verion

--- a/css/main.css
+++ b/css/main.css
@@ -1091,6 +1091,12 @@ body {
   margin-bottom: -25rem;
 }
 
+@media (max-width: 576px) {
+  .offer--secondary {
+    margin-bottom: -34rem;
+  }
+}
+
 .offer--secondary .offer-card {
   background-image: url(../img/offer-bg2.jpg);
   margin-top: -20rem;
@@ -2110,7 +2116,14 @@ body {
   padding-top: 30rem;
 }
 
+@media (max-width: 576px) {
+  .about {
+    padding-top: 39rem;
+  }
+}
+
 .about__img {
+  max-width: 100%;
   height: 26rem;
   float: left;
   margin-right: 7rem;
