--- a/sass/sections/_about.sass
+++ b/sass/sections/_about.sass
@@ -1,7 +1,10 @@
 .about
   background-color: white
   padding-top: 30rem
+  +xs
+    padding-top: 39rem
   &__img
+    max-width: 100%
     height: 26rem
     float: left
     margin-right: 7rem
