--- a/sass/sections/_offer.sass
+++ b/sass/sections/_offer.sass
@@ -6,6 +6,8 @@
     position: relative
     z-index: 2
     margin-bottom: -25rem
+    +xs
+      margin-bottom: -34rem
     .offer-card
       background-image: url(../img/offer-bg2.jpg)
       margin-top: -20rem
